#1137 - Fix z-index issue with admin date picker
(cherry picked from commit 71ca2857b670e5010840f68e8f8ff94e2bef4a97)

--- a/admin/broadleaf-open-admin-platform/src/main/resources/open_admin_style/css/admin/blc-admin.css
+++ b/admin/broadleaf-open-admin-platform/src/main/resources/open_admin_style/css/admin/blc-admin.css
@@ -607,7 +607,7 @@ table.table-hover tbody tr.draggable:hover {
     padding: 0;
     border: 1px solid #cccccc;
     border-radius: 4px;
-    z-index: 40;
+    z-index: 1050;
     right: 0;
 }
 
